[package]
name = "polytorus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9"
rust-crypto = "^0.2"
bincode = "1.3"
failure = "0.1"
sled = "0.34"
serde = {version ="1.0", features =["derive"]}
log = "0.4"
env_logger = "0.7.1"
clap = "~2.33"
bitcoincash-addr = "0.5.2"
merkle-cbt = "0.2.2"
fn-dsa = "0.2.0"
secp256k1 = "0.22.2"
rand_core = "0.6.4"
rand = "0.8.5"
wasmi = "0.40.0"
anyhow = "1.0.71"    
nom = "7.1.3"         
nom-leb128 = "0.2.0" 
num-derive = "0.4.0"  
num-traits = "0.2.15"

[dev-dependencies]
wat = "=1.0.67"
pretty_assertions = "1.4.0"